# ophelia

./: .gitignore  Cargo.toml  Makefile  README.md  dune-project  simpl.opam  swallow.opam  syntax.ebnf
.github/workflows/: ci.yaml
examples/: helloworld.oph  helloworld.ophelia  main.oph  unary.oph
lib/: ast.ml  context.ml  dune  env.ml  error.ml  eval.ml  lexer.mll  parser.ml  simpl.ml  simpl_lexer.mll  sml.ml  sml_lexer.mll  swallow.ml  swallow_lexer.mll  swallow_parser.mly  type.ml
src/: asm.rs  ast.rs  error.rs  ir.rs  main.rs  ophelia.lalrpop  semantic_analysis.rs
src/codegen/: builder.rs  func.rs  gen.rs  info.rs  mod.rs  values.rs
src/error/: mod.rs  reporter.rs
src/ir/: eval.rs  fun.rs  gen.rs  mod.rs  scopes.rs  values.rs
src/ir/error/: E0002.rs  E0003.rs  E0004.rs  E0005.rs  E0006.rs  E0007.rs  E0008.rs  E0009.rs  E0010.rs  mod.rs
src/irgen/: eval.rs  fun.rs  func.rs  gen.rs  mod.rs  scopes.rs  values.rs
src/semantic/: E0001.rs  mod.rs
src/syntax/: E0001.rs  mod.rs
test/: dune  simpl_test.ml
