[package]
name = "ophelia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
codespan-reporting = "0.11.1"
koopa = "0.0.7"
structopt = { version = "0.3", default-features = false }